# sms-spam-detection

./: .gitignore  README.md  pyproject.toml  requirements.txt  workbook.ipynb
cache/: default.vocab.pkl  minimal.vocab.pkl  no_special.vocab.pkl  raw.vocab.pkl  stemmed.vocab.pkl  wordpiece.vocab.pkl
outputs/: bce_model.pth  bce_model_summary.csv  focal_sweep_summary.csv  pos_weight_sweep_summary.csv
src/: TransformerClassifier.py  adversarial.py  data_analysis.ipynb  data_process.py  dataset.py  interfaces.py  main.py  new_train.py  results.py  train.py  tuning.py
src/analyze/: evaluate_model.py
src/cache/: vocab.pkl
src/model/: TransformerClassifier.py  config.py
src/outputs/: bce_model_tst.pth
src/training/: trainer.py  utils.py
src/types/: interfaces.py
src/utils/: loss.py  plots.py  splits.py
