[project]
name = "dl-final"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "scikit-learn>=1.6.1",
    "kagglehub>=0.3.11",
    "black>=25.1.0",
    "matplotlib>=3.10.1",
    "ruff>=0.11.6",
    "ipykernel>=6.29.5",
    "seaborn>=0.13.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
